[package]
name = "frunze_api"
version = "0.1.0"
authors = ["Aleh Zasypkin <aleh.zasypkin@gmail.com>"]

[dependencies]
bson = "0.10.0"
clippy = {version = "0.0.188", optional = true}
docopt = "0.8.3"
env_logger = "0.5.6"
error-chain = "0.11.0"
iron = "0.6.0"
futures = "0.1.18"
hyper = "0.11.22"
log = "0.4.1"
mount = "0.4.0"
mongodb = "0.3.7"
router = "0.6.0"
serde = "1.0.33"
serde_derive = "1.0.33"
serde_json = "1.0.11"
staticfile = "0.5.0"
tokio-core = "0.1.15"
unicase = "1.4.2"
url = "1.7.0"
uuid = { version = "0.6.1", features = ["v4"] }
zip = "0.3.1"

[dev-dependencies]
rustfmt-nightly = "0.4.1"
stainless = "0.1.12"

[features]
default = []
