[package]
name = "frunze_api"
version = "0.1.0"
authors = ["Aleh Zasypkin <aleh.zasypkin@gmail.com>"]

[dependencies]
actix-web = "0.7.3"
bson = "0.12.3"
bytes = "0.4.9"
docopt = "1.0.0"
env_logger = "0.5.12"
failure = "0.1.2"
futures = "0.1.23"
log = "0.4.3"
mongodb = "0.3.10"
serde = "1.0.71"
serde_derive = "1.0.71"
serde_json = "1.0.24"
url = "1.7.1"
uuid = { version = "0.6.5", features = ["v4"] }
zip = "0.4.2"
